# gophertalk-fastapi

./: .env.example  README.md  pyproject.toml
src/: app.py
src/gophertalk_fastapi/config/: config.py  db.py
src/gophertalk_fastapi/dependencies/: auth.py
src/gophertalk_fastapi/models/: auth.py  post.py  user.py  validators.py
src/gophertalk_fastapi/repository/: post_repository.py  user_repository.py
src/gophertalk_fastapi/routers/: auth_router.py  post_router.py  user_router.py
src/gophertalk_fastapi/service/: auth_service.py  post_service.py  user_service.py
tests/: conftest.py
tests/dependencies/: test_auth_dependency.py
tests/models/: test_auth_model.py  test_post_model.py  test_user_model.py
tests/repository/: test_post_repository.py  test_user_repository.py
tests/routers/: test_auth_router.py  test_post_router.py  test_user_router.py
tests/service/: test_auth_service.py  test_post_service.py  test_user_service.py
